--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,42 @@
 .App {
+  background: slategray;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -30,4 +68,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
