--- a/src/Components/addPost.css
+++ b/src/Components/addPost.css
@@ -3,7 +3,7 @@ button {
   }
 
 .control {
-background: beige;
+background: rgb(110, 151, 192);
 height: 100vh;
 width: 80%;
 display: flex;
@@ -11,23 +11,19 @@ justify-content: center;
 align-items: center
 }
 .chatbox {
-  background: white;
+  background: tan;
   height: 90vh;
   width: 80%;
   display:flex;
   flex-direction: column;
-  /* align-items: flex-end; */
   border: 1em solid black;
 
 }
 .inputBox {
-  background: plum;
+  background: rgb(82, 62, 82);
   width: 100%;
   height: 1.7em;
 }
 .display {
-  background: yellow;
-  /* display: flex;
-  align-items: flex-end; */
   width: 100%;
 }
